# chess-engine

./: Cargo.toml  README.md  a.out  castle.txt  class_contract.md  test.c
docs/: README.html
docs/book/: 404.html  chess-engine.html  index.html  print.html  searchindex.js  searchindex.json
docs/src/: README.md  SUMMARY.md  chapter_1.md  chess-engine.md
examples/: README.md  terminal.rs
examples/chess-gui/: Cargo.toml  README.md
examples/chess-gui/src/: lib.rs
examples/chess-gui/src/bins/: best.rs  horde.rs  random.rs  worst.rs
examples/chess-web/: README.md  chess-best.html  chess-horde.html  chess-random.html  chess-worst.html
examples/chess-web/src/: lib.rs
examples/chess-web/src/bins/: horde.rs
examples/chess-web/wasm/chess-best/: chess-best.js  chess-best_bg.wasm
examples/chess-web/wasm/chess-horde/: chess-horde.js  chess-horde_bg.wasm  chess-horde_bg.wasm.d.ts
examples/chess-web/wasm/chess-random/: chess-random.d.ts  chess-random.js  chess-random_bg.wasm
examples/chess-web/wasm/chess-worst/: chess-worst.js  chess-worst_bg.wasm
examples/gui/: Cargo.toml
examples/gui/src/: lib.rs
examples/gui/src/bins/: best.rs  horde.rs  random.rs  worst.rs
examples/web/: Cargo.toml  build.sh  chess-best.html  chess-horde.html  chess-random.html  chess-worst.html  home.html
examples/web/src/: lib.rs
examples/web/src/bins/: best.rs  random.rs  worst.rs
examples/web/wasm/chess-best/: chess-best_bg.wasm  chess-best_bg.wasm.d.ts
examples/web/wasm/chess-horde/: chess-horde.d.ts  chess-horde.js  chess-horde_bg.wasm
examples/web/wasm/chess-random/: chess-random.js  chess-random_bg.wasm
examples/web/wasm/chess-worst/: chess-worst_bg.wasm
src/: bin.rs  board.rs  game.rs  lib.rs  piece.rs  position.rs  square.rs  util.rs
