[package]
name = "chess-web"
version = "0.1.0"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "chess-best"
path = "src/bins/best.rs"

[[bin]]
name = "chess-worst"
path = "src/bins/worst.rs"

[[bin]]
name = "chess-random"
path = "src/bins/random.rs"

[[bin]]
name = "chess-horde"
path = "src/bins/horde.rs"

[dependencies]
iced = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
iced_web = "0.3"
lazy_static = "1.4"
chess-engine = { path = "../.." }
